# ComfyUI-PaddleOcr

./: README.md  __init__.py  paddle_ocr.py  pyproject.toml  requrements.txt
example/: ImageToMaskBox.json  ImageToText.json  VideoToText.json
