[project]
name = "comfyui-paddleocr"
description = "Nodes related to [a/PaddleOCR](https://paddlepaddle.github.io/PaddleOCR) OCR."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/civen-cn/ComfyUI-PaddleOcr"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-PaddleOcr"
Icon = ""
